@@ -9,7 +9,7 @@
  *
  * This program is distributed in the hope that it will be useful, but
  * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
- * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public 
+ * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public
  * License for more details.
  *
  * You should have received a copy of the GNU Affero General Public License
@@ -84,6 +84,35 @@ configurations {
 dependencies {
     markdownDoclet "org.jdrupes.mdoclet:doclet:3.1.0"
 }
+
+task testTaglets(type: JavaExec) {
+    dependsOn jar
+
+    jvmArgs = ['--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
+               '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED']
+    classpath sourceSets.main.compileClasspath
+    classpath files(tasks.jar)
+
+    main = 'jdk.javadoc.internal.tool.Main'
+    args = ['-doctitle', 'test',
+            '-use',
+            '-linksource',
+            '-link', 'https://docs.oracle.com/en/java/javase/17/docs/api/',
+            '--add-exports', 'jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
+            '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+            '--add-exports=jdk.javadoc/jdk.javadoc.internal.doclets.formats.html=ALL-UNNAMED',
+            '-d', 'build/test/taglets',
+            '-tagletpath', files(tasks.jar).asType(List).join(":"),
+            '-taglet', 'org.jdrupes.taglets.plantUml.InlinePlantUml',
+            '-taglet', 'org.jdrupes.taglets.plantUml.PlantUml',
+            '-taglet', 'org.jdrupes.taglets.plantUml.StartUml',
+            '-taglet', 'org.jdrupes.taglets.plantUml.EndUml',
+            '-sourcepath', 'testfiles/',
+            '-subpackages', 'test:testMore',
+            '-Xdoclint:-html'
+    ]
+}
+check.dependsOn(testTaglets)
 
 task apidocs(type: JavaExec) {
     dependsOn classes
